k8s/ingress/middleware-block-metrics.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: block-metrics
spec:
  redirectRegex:
    regex: "^/metrics"
    replacement: "/forbidden"
    permanent: false
