k8s/ingress/matchmaker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matchmaker-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-block-metrics@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /matchmaker
        pathType: Prefix
        backend:
          service:
            name: matchmaker
            port:
              number: 8080
